2000-10-31  Richard Frith-Macdonald <rfm@gnu.org>

	Loads of files modified, fast.x removed.
	Found it unexpectedly easy to tidy up so that all functions for
	accessing the runtime are now in NSObjCRuntime.h.
	Now all :-) we need are Apple runtime implementations, configuration
	auto-detect for the apple runtime, and loads of updating of any
	bits of code that call the runtime directly.

2000-10-31  Richard Frith-Macdonald <rfm@gnu.org>

	* Headers/gnustep/base/NSGString.h:
	* Headers/gnustep/base/NSGCString.h:
	* Source/NSGString.m:
	* Source/NSGCString.m: Removed classes - no longer used.
	* Headers/gnustep/base/NSObjCRuntime.h:
	* Headers/gnustep/base/fast.x:
	* Source/GSString.m:
	* Source/Makefile.postamble:
	* Source/NSArchiver.m:
	* Source/NSCTemplateValue.m:
	* Source/NSConcreteValue.m:
	* Source/NSCountedSet.m:
	* Source/NSDate.m:
	* Source/NSDictionary.m:
	* Source/NSDistantObject.m:
	* Source/NSGSet.m:
	* Source/NSNumber.m:
	* Source/NSObject.m:
	* Source/NSScanner.m:
	* Source/NSSerializer.m:
	* Source/NSSet.m:
	* Source/NSUnarchiver.m:
	Changed calls to 'fastClass()' to use 'GSObjCClassOfObject()' and
	added that to NSObjCRuntime.h.  Removed central class and
	implementation caching from NSObject.m and fast.x since it was not
	being effectively used.  New intention to do removal of fast.x and
	add similar functionality to NSObjCRuntime.h - intention being to
	combine functionality of fast access to the runtime, and hiding both
	GNU and Apple runtime behind a single interface.

2000-10-30  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSURLHandle.m: Wrap all locking with exception handlers to
	ensure that locks are released.
	* Headers/gnustep/base/NSInvocation.h: Removed non-standard macros
	* Headers/gnustep/base/behavior.h: Removed unused macro
	CALL_METHOD_IN_CLASS()
	* Source/GSString.m:
	* Source/GSXML.m:
	* Source/NSArchiver.m:
	* Source/NSArray.m:
	* Source/NSAttributedString.m:
	* Source/NSData.m:
	* Source/NSDictionary.m: